Update unit tests, add service-persistence integration test, remove selenium test